@@ -270,7 +270,14 @@
 	(rs6000_init_builtins): Likewise.
 	* config/rs6000/rs6000.md (bswaphi2): Add TARGET_POWERPC predicate.
 
-2012-01-17  Uros Bizjak  <ubizjak@gmail.com>
+2013-03-18  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR target/56470
+	* arm.c (shift_op): Validate RTL pattern on the fly.
+	(arm_print_operand, case 'S'): Don't use shift_operator to validate
+	the RTL.
+
+2013-01-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline
 	2012-01-17  Uros Bizjak  <ubizjak@gmail.com>
